@@ -7,7 +7,10 @@ public class PythonUtil {
 
 	public static String python(String pythonFile, String url) throws Exception {
 		StringBuffer sb = new StringBuffer();
-		Process pr = Runtime.getRuntime().exec("python "+pythonFile+" " + url);
+//		Process pr = Runtime.getRuntime().exec("cmd /c python " + pythonFile + " " +url);
+		ProcessBuilder pb = new ProcessBuilder("python", pythonFile, url);
+		pb.redirectErrorStream(true);
+		Process pr = pb.start();
 		BufferedReader in = new BufferedReader(new InputStreamReader(pr.getInputStream()));
 		String line;
 		while ((line = in.readLine()) != null) {
